package com.example.grpc.waitforready;

import com.example.grpc.Servers;
import com.example.grpc.EchoRequest;
import com.example.grpc.EchoResponse;
import com.example.grpc.EchoServiceGrpc;
import io.grpc.stub.StreamObserver;

import java.io.IOException;
import java.util.logging.Level;
import java.util.logging.Logger;

public class WaitForReadyUnaryServer {

    private static final Logger logger = Logger.getLogger(WaitForReadyUnaryServer.class.getName());

    public static void main(String[] args) throws IOException, InterruptedException {
        Servers.start(new EchoServiceImpl());
    }

    private static class  EchoServiceImpl extends EchoServiceGrpc.EchoServiceImplBase {
        @Override
        public void unaryEcho(EchoRequest request, StreamObserver<EchoResponse> responseObserver) {
            logger.log(Level.INFO, "request: {0}", request.getMessage());
            var response = EchoResponse.newBuilder().setMessage("hello " + request.getMessage()).build();
            responseObserver.onNext(response);
            responseObserver.onCompleted();
        }
    }
}
